--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=pw_api_u3_p6_hc
 
 #String de conexion a la base de datos
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/pwebp6
 
 spring.datasource.username=postgres
 
-spring.datasource.password=admingres
+spring.datasource.password=labcom,2015
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
@@ -18,3 +18,6 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+#manero de la URL completa de la pagina
+server.servlet.context-path= /API/v1.0/Matricula
