--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.show-sql=true
 
 #manero de la URL completa de la pagina
 server.servlet.context-path= /API/v1.0/Matricula
+
+#server.port=8082
