--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pwebp6
 
 spring.datasource.username=postgres
 
-spring.datasource.password=12345
+spring.datasource.password=labcom,2015
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
