taller 32: hateoas  uso del links

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pwebp6
 
 spring.datasource.username=postgres
 
-spring.datasource.password=labcom,2015
+spring.datasource.password=12345
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
@@ -21,5 +21,8 @@ spring.jpa.show-sql=true
 
 #manero de la URL completa de la pagina
 server.servlet.context-path= /API/v1.0/Matricula
+
+
+
 
 #server.port=8082
