--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
 			<version>2.17.1</version>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas -->
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
